--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,5 +17,7 @@
 
 <!-- For all browsers -->
 <link rel="stylesheet" href="{{ base_path }}/assets/css/main.css">
+<!-- <script src="https://kit.fontawesome.com/877d2cecdc.js" crossorigin="anonymous"></script> -->
+<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/> -->
 
 <meta http-equiv="cleartype" content="on">
